# yumako_jams

./: .gitignore  Cargo.toml  LICENSE  README.md  berger.toml
.github/workflows/: codeql.yml  rust.yaml
docs/: book.toml
docs/src/: SUMMARY.md  yumako_jam.md
docs/src/create/: consuming_stream.md  performance.md  variables.md
docs/src/create/input_types/: stat_period.md
docs/src/modules/: filters.md  listens.md  mappers.md  scoring.md  seeders.md
docs/src/usage/: variables.md
exemples/: listened_artists.json  listenrate_radio.json  overdue_count.json  test_radio.json
src/: client.rs  error.rs  lib.rs  radio_item.rs  radio_stream.rs  radio_variables.rs
src/json/: layer.rs  mod.rs  radio.rs  radio_input.rs
src/modules/: mod.rs  radio_module.rs
src/modules/filters/: booleans.rs  cooldown.rs  listens.rs  mod.rs  timeout.rs
src/modules/listen_data/: clear_listens.rs  last_listens.rs  listen_interval.rs  mod.rs
src/modules/mappers/: artist_discography.rs  mod.rs
src/modules/scores/: bump.rs  listenrate.rs  mod.rs  overdue_count.rs  overdue_duration.rs  rank.rs  sort.rs
src/modules/seeders/: listen_seeder.rs  mod.rs
src/repository/: error.rs  mod.rs  radio_declaration.rs  repository_file.rs
