[package]
name = "yumako_jams"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["RustyNova"]
license = "MIT"
description = "Radio generator based on ListenBrainz data"

[dependencies]
alistral_core = { path = "../alistral_core" }
musicbrainz-db-lite = { path = "../musicbrainz_db_lite" }
tuillez = { path = "../tuillez" }

async-fn-stream = "0.2.2"
futures = "0.3.31"
json = "0.12.4"
serde = "1.0.217"
serde_json = "1.0.138"
thiserror = "2.0.11"
i_splits = "0.1.0"
streamies = "0.2.2"
chrono = "0.4.40"
rust_decimal = "1.36.0"
tracing = "0.1.41"
extend = "1.2.0"
tokio = { version = "1.44.0", features = ["full"] }
rand = "0.9.0"
sqlx = "0.8.3"
itertools = "0.14.0"
priority-queue = "2.3.0"
toml = "0.8.20"
reqwest = "0.12.15"

[lints]
workspace = true

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
